lab1/Test/L1-A-12-31.output
Error Type A at Line 15
Error Type B at Line 46
Error Type A at Line 72
Error Type B at Line 73
