lab1/Test/L1-A-12-31.cmm
int ;
int VLdRbV5rfD8Kx1Zq8 
;
float x ( ) {
  struct Xty25Q3chyUgRz QNojn8G2 [ 608767291 ] , dlPjdTJYFPPwY7bpA_ 
    = RodOCjDcj1mk ;
  if ( HazfJEuH5aK9lh )   o ;
else   while ( vcqV )   return UQ6JdU_0kyW || _dIO_83OGNQUyYAGX_ 
    && LxyAGdeWaPLLP2V07No < r / IyXQv2KYdWh0D ( j = f 
    != vLmrhxm_V - j0ZizE6DuRODt6f0AGQ * ! fT1vM_JMwsytlslfoE 
    [ aKY09NvP8QEUk = EezlTAB && mgBq9RLrLXf3UtZwXUiJ 
    > nHxLQMc4jE / NAOH ( LqAvgEGFAsaLcI , pcbgDF6v3s 
    = cx85EhwXF0s1MF4Ne4 == ( p2Q_TBL367KMt ( iT >= VTSOfQM1V 
    ( Njy7EqYjEK3BSebJcr , E = VVHJ67mIwdjPsI8hDu <= abiuUcE3Gm0pB 
    ) * wbuB / - - - ! 1614540483.330439465 `) ) ) / SWgtadXUL45PqKvGCl7h 
    / - 1607851694 ] + - ! i1QLDA ( ) ) . bFw41ZjRbL52P0yX0fz 
    ;


}
int k3rAD3y3p , IKwOib1cNzbwZ1h5QvY8 

;
int ;
int ;
struct vBI71foQp61pD7GS7nF ;
struct {
}NQtfVB8goBnWFM ( int OM8IftrPB ) {
  yYDj ;
  while ( StMO4_rEaco7 )   YtTEuuCs ;

  if ( RII )   if ( P6sZ4i )   cdUdg ;
else   Wpv2nZQUS ;

else   while ( _VBvG71WrZlJ )   D8_M ;


  if ( l6K4 )   while ( gSMScGsKNQDRAo7wtLz6 )   _FSlSrJoqhD7CAhYV3C 
    ;

else   if ( B22 ) {
    if ( Yo8HCotMW ) {
      b3pFhcyFx5uDi ;
      if ( QPikMLWypNeAPtHCnCQM )       E6MuIRNUS58CmU 
        
else       if ( JA2kL9aFP8N )       if ( N3xCH6LjLFnYd0Ay 
        )       Ad5jN2OoFUO ;



    }
    while ( wc97O3UrIQF0flxxaRYK )     o0rr_b ;

  }

}
int ;
struct yB9upHCh_Oi {
  int vCzeiWiw ;
};
struct Ri rZ16 
;
int ;
int ;
int ;
int ;
int ;
int ;
int ;
int ;
int FFx_j1 ( int lgCt , int UL ) {
}&
int RQ4 ( {
}
